[project]
name = "comfyui-rvtools_v2"
description = "this node contains a lot of small little helpers like switches, passers and selectors that i use a lot to build my workflows."
version = "2.2.0"
license = { file = "LICENSE" }
dependencies = ["torch", "numpy", "Pillow"]

[project.urls]
Repository = "https://github.com/Rvage0815/ComfyUI-RvTools_v2"

[tool.comfy]
PublisherId = "Rvage0815"
DisplayName = "ComfyUI-RvTools_v2"
Icon = ""
